--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,8 @@ html {
   line-height: 1.4;
 }
 
-/*
+  /*
+
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
  *
@@ -86,6 +87,140 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+
+/* ----------------- BASE HEADER - FOOTER STYLES ---------------------------- */
+
+header, footer{
+ 
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  flex-flow: row wrap;
+}
+
+header .content-wrapper {
+
+  display:flex;
+  justify-content: center;
+  align-items:center;
+  flex-flow: row wrap;
+}
+
+header nav {
+
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+header nav ul{
+
+  display:flex;
+  justify-content:space-around;
+
+}
+
+footer .social-icons p{
+  
+  display:flex;
+  justify-content:center;
+  align-items:center;
+
+}
+
+/* ---------------------- MOBILE STYLES - HOMEPAGE --------------------------- */
+
+.hero-area {
+
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+/* ---------------------------- ASIDE ------------------------------------------ */
+
+aside {
+
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/* ----------------------------FEATURES ---------------------------------------- */
+
+.features {
+
+  display:flex;
+  justify-content:center;
+  flex-flow: row wrap;
+
+}
+
+.features .features-items {
+
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+
+}
+
+/* ----------------------------REVIEWS ----------------------------------------- */
+
+.reviews {
+
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+/* =============================================================================
+   ABOUT PAGE 
+   ============================================================================= */
+
+.mission {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+
+}
+
+.contact-section {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+
+}
+
+/* ===============================================================================
+   FAQ PAGE
+   =============================================================================== */
+
+   .faq {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+
+   }
+
+   .faq .content-wrapper {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    
+   }
+
+
 
 /* ==========================================================================
    Helper classes
